@@ -7,6 +7,7 @@
 	bugfix: string value "0" was incorrectly handled, when displaying or entering data
 	bugfix: rackspace allocation history recording did not work in 0.17.0
 	bugfix: boolean expressions parsing in RackCode now honours priorities
+	bugfix: upgrade script could fail sometimes
 	update: removed unused database index
 0.17.0 2009-05-20
 	new feature: file attachments (by Aaron)
